--- a/style.css
+++ b/style.css
@@ -104,12 +104,6 @@ form input {
     padding: 1.5em;
 }
 
-/*
-form input:target {
-    border: 1px solid hsl(4, 100%, 67%);
-}
-*/
-
 .validation-email {
     display: flex;
     justify-content: space-between;
@@ -150,8 +144,9 @@ form input:target {
     width: 350px;
 }
 
-img {
+.card-ilustration {
     max-height: 100%;
+    content: url(./assets/images/illustration-sign-up-desktop.svg);
 }
 
 /* Success card Style */
@@ -177,4 +172,49 @@ img {
 
 .attribution a {
     color: hsl(228, 56%, 58%);
+}
+
+/* Responsive Style */
+
+@media screen and (max-width: 768px) {
+    .container {
+        border-radius: 0px;
+    }
+
+    .card {
+        margin: 0px;
+        max-width: 374px;
+    }
+
+    .card-content {
+        padding-top: 18em;
+        margin-right: 2em;
+    }
+
+    .card-title {
+        font-size: 46px;
+    }
+
+    .card-image {
+        position: absolute;
+    }
+
+    .card-ilustration {
+        content: url(./assets/images/illustration-sign-up-mobile.svg);
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .card-content {
+        padding-top: 16em;
+    }
+
+    .card-title {
+        font-size: 40px;
+    }
+
+    .card-image,
+    .card-ilustration {
+        max-width: -webkit-fill-available;
+    }
 }
